--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11362,7 +11362,6 @@ body {
 
 .favorite {
   position: absolute;
-  z-index: 10000;
   margin-left: 25px;
   width: 47.53px;
   height: 64.16px;
@@ -11566,6 +11565,712 @@ body {
   align-items: center;
 
   color: #405666;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.forms form { padding: 30px; }
+#signup { display: none; }
+#signup-next {display: none; }
+.forms .tab-group {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.forms .tab-group:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.signIn {
+  width: 245px;
+  height: 89px;
+
+  background: #E3EDF7;
+  border-radius: 10px 0px 0px 0px;
+}
+.signUp {
+  width: 245px;
+  height: 89px;
+
+  background: #AFC5DB;
+  border-radius: 0px 10px 0px 0px;
+}
+.login-btn-text {
+  text-decoration: none;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  align-items: center;
+  text-align: right;
+  text-transform: uppercase;
+
+  color: #637E99;
+}
+.login-subtext {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 27px;
+  /* or 247% */
+
+  text-align: center;
+  letter-spacing: -0.540636px;
+
+  color: #637E99;
+}
+.signUp-btn-text {
+  text-decoration: none;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: #FFFFFF;
+}
+
+.signUp-subtext {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 27px;
+  /* or 247% */
+
+  text-align: center;
+  letter-spacing: -0.540636px;
+
+  color: #EFF7FF;
+}
+
+.login-form {
+  width: 490px;
+  background: #E3EDF7;
+}
+.signUp-form {
+  width: 490px    ;
+  background: #AFC5DB;
+}
+.signIn-form {
+  width: 490px    ;
+  background: #E3EDF7;
+}
+.reg-title {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 24px;
+
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: #FFFFFF;
+}
+
+.input-text {
+  color: white;
+  outline: none;
+  border: none;
+  height: 52.39px;
+  margin-top: 15px;
+  background: #B3C9DF;
+  box-shadow: 2px 2px 2px rgba(255, 255, 255, 0.49), inset 3px 4px 3px rgba(93, 148, 204, 0.5);
+  border-radius: 31px;
+}
+.input-text::placeholder {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 27px;
+  /* or 124% */
+
+  text-align: center;
+  letter-spacing: -0.540636px;
+
+  color: #FFFFFF;
+}
+.input-select {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 27px;
+  /* or 124% */
+
+  text-align: center;
+  letter-spacing: -0.540636px;
+
+  color: #FFFFFF !important;
+
+  overflow: hidden;
+  margin-top: 15px;
+  height: 52.39px;
+  border: none;
+  background: linear-gradient(0deg, #B2C9DF, #B2C9DF);
+  box-shadow: -4px -4px 4px #C5D7EA, 3px 3px 4px rgba(93, 148, 204, 0.25);
+  border-radius: 31px;
+}
+.input-select-option {
+  color: white;
+  margin-top: 9px;
+  border: none;
+  background: linear-gradient(0deg, #B2C9DF, #B2C9DF);
+  outline: none;
+}
+
+.input-select-option-inside {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 27px;
+  /* or 124% */
+
+  text-align: center;
+  letter-spacing: -0.540636px;
+
+  color: #FFFFFF;
+}
+.btn-submit {
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 27px;
+  /* or 124% */
+
+  text-align: center;
+  letter-spacing: -0.540636px;
+
+  color: #FFFFFF;
+
+  margin-top: 15px;
+  height: 52.39px;
+
+  background: linear-gradient(0deg, #B2C9DF, #B2C9DF);
+  border: 0.3px solid #FFFFFF;
+  box-sizing: border-box;
+  box-shadow: -4px -4px 4px #C5D7EA, 3px 3px 4px rgba(93, 148, 204, 0.25);
+  border-radius: 31px;
+}
+.aggrement {
+
+  margin-top: 20px;
+  height: 32px;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 16px;
+  align-items: center;
+  text-align: center;
+  font-variant: small-caps;
+
+  color: #FFFFFF;
+}
+.input-text-login {color: white;
+  outline: none;
+  height: 52.39px;
+  border: none;
+
+  background: #CDDFEF;
+  box-shadow: 2px 2px 2px rgba(255, 255, 255, 0.49), inset 3px 4px 3px rgba(93, 148, 204, 0.25);
+  border-radius: 31px;
+}
+
+.input-text-login::placeholder {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 27px;
+  /* or 124% */
+
+  text-align: center;
+  letter-spacing: -0.540636px;
+
+  color: #70889A;
+}
+.login-title {
+  width: 429px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: #637E99;
+
+  margin-top: 30px;
+}
+
+.login-title-btn {
+  height: 52.39px;
+  margin-top: 15px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 27px;
+  /* or 151% */
+
+  text-align: center;
+  letter-spacing: -0.540636px;
+
+  color: #70889A;
+
+  background: linear-gradient(0deg, #E3EDF7, #E3EDF7);
+  box-shadow: -4px -4px 4px rgba(255, 255, 255, 0.8), 3px 3px 4px rgba(93, 148, 204, 0.25);
+  border-radius: 31px;
+}
+input{
+  padding: 0px 20px;
+}
+
+.verify-code-input[type="text"] {
+  text-align: center;
+}
+
+
+.verify-code-input {
+  outline: none;
+  width: 73px;
+  height: 73px;
+
+  background: #CDDFEF;
+  box-shadow: 2px 2px 2px rgba(255, 255, 255, 0.49), inset 3px 4px 3px rgba(93, 148, 204, 0.25);
+  border-radius: 47.5px;
+}
+
+.cart-header {
+  width: 350px;
+  height: 51px;
+
+  background: #E3EFFB;
+  box-shadow: 0px 4px 4px #D0E1F1;
+  border-radius: 10px;
+}
+
+.top-cart-cart {
+  padding-left: 10px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 18px;
+  display: flex;
+  align-items: center;
+
+  color: #43637A;
+}
+.clear-cart {
+  padding-right: 10px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  text-align: right;
+
+  color: #43637A;
+}
+
+.empty-title {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 19px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+
+  color: #43637A;
+}
+
+#cart-cont {
+  z-index: 100;
+
+  left: 100vw;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  box-sizing: border-box;
+  transition: 0.8s;
+  display: none;
+  pointer-events: all;
+}
+#cart-cont h3 {
+  text-align: center
+}
+#cart-cont.open {
+  left: 0vw;
+  display: block;
+}
+#cart-cont.open #close-cart {
+  display: block;
+}
+#cart-cont input, #cart-cont button {
+  outline: 0 !important;
+}
+#close-cart, #closecheck {
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  box-shadow: none;
+  width: 1.484vw;
+  height: 1.484vw;
+  background: url(/images/closecart.png);
+  top: 2.344vw;
+  right: 3.281vw;
+  position: absolute;
+  background-size: cover;
+  z-index: 120;
+}
+#close-cart, #closecheck {
+  z-index: 120;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  box-shadow: none;
+  width: 0.484vw;
+  height: 1.484vw;
+  background: url(/images/closecart.png);
+  top: 8.344vw;
+  right: 3.4.281vw;
+  background-position: center center;
+  position: absolute;
+  background-size: cover;
+}
+#cart-cont.open #close-mask {
+  transform: scale(1);
+  border-radius: 0;
+}
+#close-mask.empty-cart {
+  width: 56.1vw;
+}
+#cart-cart.empty-cart {
+  width: 44vw;
+  z-index: 111;
+}
+#cart-cart {
+  border-radius: 10px;
+  width: 350px !important;
+
+  transition: 0.4s;
+  position: absolute;
+  background: #E3EFFB;
+  top: 167px;
+
+  overflow: auto;
+  right: 93px;
+  left: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.category-left-menu {
+  width: 320px;
+  left: 58px;
+  top: 345px;
+
+  background: #E3EDF7;
+  box-shadow: -3px -3px 10px rgba(255, 255, 255, 0.5), inset 0px 4px 4px rgba(93, 148, 204, 0.22);
+  border-radius: 11px;
+}
+
+.menu-body {
+  font-family: Montserrat;
+  color: #7791A4;
+}
+
+.left-menu-devider {
+  width: 281px;
+  height: 2px;
+  left: calc(50% - 281px/2 - 393.5px);
+  top: 399px;
+
+  background: #FFFFFF;
+  border-radius: 0px 0px 1px 0.999997px;
+}
+
+.category-list {
+
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+
+  line-height: 42px;
+  /* or 236% */
+
+  letter-spacing: -0.540636px;
+
+  color: #43637A;
+}
+
+
+.category-list:hover{
+  background: #F8FBFF;
+}
+
+.product_name {
+
+  height: 70px;
+  left: calc(50% - 350px/2 + 380px);
+  top: 380px;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 25px;
+  /* or 83% */
+
+  letter-spacing: -0.540636px;
+
+  color: #59677D;
+}
+
+.product-devider {
+  width: 350px;
+  height: 2px;
+  left: calc(50% - 350px/2 + 380px);
+  top: 715px;
+
+  background: #FFFFFF;
+  border-radius: 0px 0px 1px 0.999997px;
+}
+
+.qty .count {
+  /*color: #000;*/
+  display: inline-block;
+  vertical-align: top;
+  /*font-size: 25px;*/
+  /*font-weight: 700;*/
+  /*line-height: 48px;*/
+  padding: 0 2px;
+  min-width: 35px;
+  text-align: center;
+  font-family: SF Pro Display;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 33px;
+  line-height: 48px;
+  /* or 79% */
+
+  text-align: center;
+  letter-spacing: -0.540636px;
+
+  color: #56708A;
+}
+.qty .plus {
+  font-family: SF Pro Display;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 33px;
+  line-height: 42px;
+  /* or 79% */
+
+  text-align: center;
+  letter-spacing: -0.540636px;
+
+  color: #56708A;
+  /*cursor: pointer;*/
+  display: inline-block;
+  vertical-align: top;
+
+  /*width: 30px;*/
+  /*height: 30px;*/
+  /*font: 30px/1 Arial,sans-serif;*/
+  border-radius: 50%;
+  width: 50.88px;
+  height: 48.85px;
+
+
+  background: #E3EDF7;
+  box-shadow: -2px -2px 2px rgba(255, 255, 255, 0.7), 2px 2px 2px rgba(93, 148, 204, 0.25), inset 1px 1px 3px rgba(93, 148, 204, 0.25), inset -1px -1px 3px rgba(255, 255, 255, 0.8);
+}
+.qty .minus {
+
+  font-family: SF Pro Display;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 33px;
+  line-height: 42px;
+  /* or 79% */
+
+  text-align: center;
+  letter-spacing: -0.540636px;
+
+  color: #56708A;
+  /*cursor: pointer;*/
+  display: inline-block;
+  /*width: 30px;*/
+  /*height: 30px;*/
+  /*font: 30px/1 Arial,sans-serif;*/
+  text-align: center;
+  border-radius: 50%;
+  width: 50.88px;
+  height: 48.85px;
+
+
+  background: #E3EDF7;
+  box-shadow: -2px -2px 2px rgba(255, 255, 255, 0.7), 2px 2px 2px rgba(93, 148, 204, 0.25), inset 1px 1px 3px rgba(93, 148, 204, 0.25), inset -1px -1px 3px rgba(255, 255, 255, 0.8);
+}
+
+/*Prevent text selection*/
+span{
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+.count{
+  border: 0;
+  width: 2%;
+}
+.count::-webkit-outer-spin-button,
+.count::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.count:disabled{
+  background: #E3EDF7;
+}
+
+.raiting-first {
+  font-family: SF Pro Display;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 70px;
+  line-height: 19px;
+  /* or 27% */
+
+  letter-spacing: -0.540636px;
+
+  color: #5C7084;
+}
+.raiting-second {
+  font-family: SF Pro Display;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 25px;
+  line-height: 19px;
+  /* or 75% */
+
+  letter-spacing: -0.540636px;
+
+  color: #5C7084;
+}
+
+.review-form {
+  width: 730px;
+  height: 160px;
+  left: 438px;
+  top: 1203px;
+  border: none;
+
+  background: rgba(205, 223, 239, 0.85);
+  box-shadow: 2px 2px 2px rgba(255, 255, 255, 0.49), inset 3px 4px 3px rgba(93, 148, 204, 0.25);
+  border-radius: 13px;
+}
+
+.submit-review {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 21px;
+  /* or 74% */
+
+  text-align: center;
+  letter-spacing: -0.540636px;
+
+  color: #43637A;
+
+
+  width: 309px;
+  height: 53px;
+  left: 1168px;
+  top: 1457px;
+
+  background: linear-gradient(0deg, #E3EDF7, #E3EDF7);
+  box-shadow: -4px -4px 4px rgba(255, 255, 255, 0.8), 3px 3px 4px rgba(93, 148, 204, 0.25);
+  border-radius: 11px;
+}
+
+.add_to_cart {
+  width: 350px;
+  height: 64px;
+  left: calc(50% - 350px/2 + 730px);
+  top: 847px;
+
+  background: linear-gradient(0deg, #E3EDF7, #E3EDF7);
+  border: 1px solid #41A1A4;
+  box-sizing: border-box;
+  box-shadow: -4px -4px 4px rgba(255, 255, 255, 0.8), 3px 3px 4px rgba(93, 148, 204, 0.25);
+  border-radius: 10px;
+  outline: none !important;
+}
+
+.add_to_cart_text {
+  font-family: SF Pro Display;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 27px;
+  /* identical to box height, or 113% */
+
+  text-align: center;
+  letter-spacing: -0.0406364px;
+
+  color: #4F7D8B;
 }
 
 
