--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11025,19 +11025,17 @@ a.text-dark:focus {
 .search-div {
     margin-left: 50px;
 }
+
 .cart-div {
 
 }
-.minus-z-index .navbar, .minus-z-index .search-div, .minus-z-index #section-list,
-.minus-z-index .container,
-.minus-z-index .faq,
-.minus-z-index #munu_line_devider,
-.minus-z-index .category-left-menu, .minus-z-index .product-list-mobile,
-.minus-z-index .home-about-banner, .minus-z-index .cart-div,
-.minus-z-index .uk-position-relative,
-.minus-z-index .menu-line, .minus-z-index .menu-blackline  {
-    z-index: -1;
+
+.minus-z-index #app {
+    background: #0060a99c;
+    opacity: 0.2;
 }
+
+
 /*.menu-line {*/
 /*margin-top: -18px;*/
 /*width: 1100px;*/
@@ -13855,14 +13853,16 @@ and (-webkit-device-pixel-ratio: 3) {
 }
 
 .bredLink {
-  padding: 5px;
-  color: #7791A4;
+    padding: 5px;
+    color: #7791A4;
 }
+
 .sort-by {
     background: #E3EDF7;
     box-shadow: -3px -3px 10px rgba(255, 255, 255, 0.5), inset 0px 4px 4px rgba(93, 148, 204, 0.22);
     border-radius: 11px;
 }
+
 .price-title {
     color: #7791A4;
     font-size: 18px;
