--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12805,7 +12805,7 @@ and (max-device-width: 568px) {
 
 @media only screen
 and (min-device-width: 414px)
-and (max-device-width: 812px) {
+and (max-device-width: 736px) {
 
     .sections-banner {
         display: none;
@@ -12908,8 +12908,8 @@ and (max-device-width: 812px) {
     }
 
     #cart-cart {
-        width: 41% !important;
-        right: 37rem !important;
+        width: 100% !important;
+        right: 2px !important;
         top: 55px !important;
     }
 
