--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11121,7 +11121,6 @@ a.text-dark:focus {
 
     margin-top: 30px;
     margin-left: 15px;
-    width: 259px;
     height: 16px;
 
     font-family: Montserrat;
@@ -12790,19 +12789,21 @@ and (max-device-width: 568px) {
     }
 
     .menu-line {
-        width: 334px !important;
         height: 1px !important;
     }
 
     .menu-blackline {
-        width: 334px !important;
         height: 1px !important;
     }
 }
 
+
 @media only screen
-and (min-device-width: 414px)
-and (max-device-width: 736px) {
+and (max-width: 768px) {
+
+    .additional-menu {
+        display: none;
+    }
 
     .sections-banner {
         display: none;
@@ -12826,28 +12827,28 @@ and (max-device-width: 736px) {
     }
 
     .searchRes {
-        width: 325px !important;
+        width: 325px !important; ;
     }
 
     .almarket-word {
-        margin-left: 20px !important;
+        margin-left: 20px ;
     }
 
     .banner-text-one {
-        margin-left: 20px !important;
+        margin-left: 20px ;
     }
 
     .banner-text-two {
-        margin-left: 20px !important;
+        margin-left: 20px ;
     }
 
     .banner-button {
-        margin-left: 20px !important;
+        margin-left: 20px ;
     }
 
 
     .product-list-mobile {
-        width: 207px !important;
+        width: 207px ;
     }
 
     .sort-div-title {
@@ -12981,34 +12982,34 @@ and (max-device-width: 736px) {
     }
 
     .banner-button {
-        width: 250px !important;
-        height: 49px !important;
+        width: 250px ;
+        height: 49px ;
     }
 
     .banner-button-text {
-        width: 260px !important;
-        font-size: 14px !important;
-        line-height: 17px !important;
+        width: 260px ;
+        font-size: 14px ;
+        line-height: 17px ;
     }
 
     .popular-hr {
-        width: 142px !important;
+        width: 168px;
     }
 
     .sale-hr {
-        width: 142px !important;
+        width: 170px ;
     }
 
     .rec-hr {
-        width: 80px !important;
+        width: 100px ;
     }
 
     .product {
-        width: 175px !important;
+        width: 175px ;
     }
 
     .product-image {
-        width: 146px !important;
+        width: 146px ;
     }
 
     .new-price {
@@ -13041,7 +13042,7 @@ and (max-device-width: 736px) {
         font-family: Montserrat;
         font-style: normal;
         font-weight: normal;
-        font-size: 20px !important;
+        font-size: 17px;
         line-height: 24px !important;
         align-items: center;
         text-transform: capitalize;
@@ -13501,13 +13502,13 @@ and (max-device-width: 736px) {
 
     .content-mobile-menu {
         padding: 20px;
-        margin-top: 7px;
+        margin-top: 17px;
         background: #FFFFFF;
         width: 100%;
         z-index: 100;
         position: absolute;
         display: none;
-        margin-left: -361px !important;
+        margin-left: -361px;
 
         font-family: Montserrat;
         font-style: normal;
@@ -13522,7 +13523,7 @@ and (max-device-width: 736px) {
 
     .search {
         border: none;
-        width: 318px !important;
+        width: 314px;
         height: 35.55px;
 
         background: rgba(205, 223, 239, 0.85);
@@ -13544,22 +13545,23 @@ and (max-device-width: 736px) {
     }
 
     .menu-line {
-        width: 378px !important;
+
         height: 1px !important;
     }
 
     .menu-blackline {
-        width: 378px !important;
         height: 1px !important;
     }
 }
 
 @media only screen
-and (min-device-width: 375px)
-and (max-device-width: 812px)
-and (-webkit-device-pixel-ratio: 3) {
+and (max-device-width: 375px) {
     .navbar {
         display: none !important;
+    }
+
+    .popular-title {
+        font-size: 14px;
     }
 
     .category-web {
@@ -13568,7 +13570,7 @@ and (-webkit-device-pixel-ratio: 3) {
 
     .search {
         border: none;
-        width: 278px;
+        width: 276px;
         height: 35.55px;
 
         background: rgba(205, 223, 239, 0.85);
@@ -13610,12 +13612,11 @@ and (-webkit-device-pixel-ratio: 3) {
     }
 
     .menu-line {
-        width: 334px;
+
         height: 1px !important;
     }
 
     .menu-blackline {
-        width: 334px;
         height: 1px !important;
     }
 
@@ -13688,8 +13689,7 @@ and (-webkit-device-pixel-ratio: 3) {
         z-index: 100;
         position: absolute;
         display: none;
-        margin-left: -322px;
-
+        margin-left: -327px;
         font-family: Montserrat;
         font-style: normal;
         font-weight: bold;
@@ -13710,6 +13710,18 @@ and (-webkit-device-pixel-ratio: 3) {
         background: radial-gradient(65.46% 77.72% at 41.48% 22.38%, #E7F2FF 0%, #FFFFFF 17.19%, #E7F2FF 47.92%, #80B5EF 81.76%, #9DDCFF 99.1%);
         box-shadow: 0px 7.8125px 11.7187px rgba(0, 25, 88, 0.3), inset 7.8125px 14.2969px 19.5312px #FFFFFF, inset 36.6016px 56.1328px 91.2109px rgba(255, 255, 255, 0.7);
         border-radius: 60px;
+    }
+
+    .searchRes {
+        width: 283px !important;
+    }
+
+    .section-banner {
+        width: 345px !important;
+    }
+
+    .bread {
+        font-size: 11px;
     }
 
 }
@@ -13947,14 +13959,14 @@ and (-webkit-device-pixel-ratio: 3) {
 
 .menu-line {
     margin-top: -18px;
-    width: 1140px;
+    /*width: 1140px;*/
     height: 2px;
     background: #FFFFFF;
     border-radius: 0px 0px 1px 1px;
 }
 
 .menu-blackline {
-    width: 1140px;
+    /*width: 1140px;*/
     height: 2px;
     background: #C9DBEF;
     border-radius: 1px 1px 0px 0px;
@@ -14032,27 +14044,35 @@ and (-webkit-device-pixel-ratio: 3) {
     color: #849CAE;
 }
 
+@media only screen and (max-width: 320px) {
+    .additional-menu {
+        display: none;
+    }
+    .social {
+        height: 37px;
+    }
 
-/*------------------------------------------------------------------------------------------------------------*/
-/*Малые девайсы («ландшафтные телефоны», >= 576px)*/
-@media (min-width: 576px) {
+    .footer-link {
+        font-size: 12px;
+    }
 
+    .popular-title {
+        font-size: 9px;
+    }
+
+    .search {
+        width: 223px;
+    }
 }
 
-/*------------------------------------------------------------------------------------------------------------*/
- /*Средние девайсы («таблетки», >= 768px)*/
-@media (min-width: 768px) {
+@media only screen and (max-width: 600px)
+and (min-width: 376px){
+    .additional-menu {
+        display: none;
+    }
+    #cart-cart{
+        width: 39% !important;
+        right: 603px !important;
 
-}
-
-/*------------------------------------------------------------------------------------------------------------*/
-/*// Большие девайсы (десктопы, >= 992px)*/
-@media (min-width: 992px) {
-
-}
-
-/*------------------------------------------------------------------------------------------------------------*/
-/*// Экстрабольшие девайсы (большие десктопы, >= 1200px)*/
-@media (min-width: 1200px) {
-
+    }
 }
