--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13364,7 +13364,7 @@ and (max-width: 768px) {
         font-style: normal;
         font-weight: bold;
         font-size: 13px;
-        line-height: 18px;
+        line-height: 32px;
         /* identical to box height, or 139% */
 
         text-align: center;
@@ -13414,7 +13414,7 @@ and (max-width: 768px) {
     }
 
     .signIn-form {
-        width: 326px;
+        width: 324px;
 
         left: 25px;
         top: 293px;
@@ -13612,6 +13612,26 @@ and (max-width: 768px) {
 
 @media only screen
 and (max-device-width: 375px) {
+
+    .uk-modal-body {
+        padding: 30px 10px !important;
+    }
+
+    .signUp-form {
+        width: 325px;
+    }
+
+    .login-form {
+        width: 325px;
+    }
+
+    [class*=uk-modal-close-] {
+        top: 8px !important;
+        right: -8px !important;
+    }
+
+
+
 
     .uk-child-width-1-2>* {
         width: 47% !important;
@@ -14104,7 +14124,11 @@ and (max-device-width: 375px) {
     color: #849CAE;
 }
 
+
 @media only screen and (max-width: 320px) {
+    .sort-div {
+        width: 100%;
+    }
     .additional-menu {
         display: none;
     }
@@ -14130,9 +14154,13 @@ and (min-width: 376px){
     .additional-menu {
         display: none;
     }
-    #cart-cart{
-        width: 39% !important;
-        right: 603px !important;
+}
 
-    }
+@media only screen and (max-width: 374px)
+and (min-width: 319px){
+
+}
+
+.sort-div{
+    width: 320px;
 }
